Changelog
=========

### 1.3 (Not released)
- Sync with Dropbox & Ubuntu One
- Updated various translations
- Removal of Someday
- New Icon
- Scheduled Tasks
- Recurring Tasks
- If there is nothing in the search box, it just displays the list.
- List of Donors
- New Icon

### 1.2.5 (2012-04-03)
- Added 'All Tasks' list
- Search now only searches the current list (use the All Tasks list to search all tasks)
- Fixes dropdown menu position in Wunderlist theme
- Added a keyboard shortcut for deleting tasks (the delete key)
- If no lists are selected (e.g. in logbook view) Shift+U and Shift+I now auto select the today list
- Placeholder text in search beox is now fainter
- '1 day left' -> 'due tomorrow' and '1 day overdue' -> 'due yesterday'
- Removed 'dayLeft' and 'dayOverdue' from translation
- If there are no search results, "No Search Results" will be displayed
- Add padding to the bottom of the tasks so that you can scroll past the last task
- Set a max height for the notes editor
- Deleting a list will no longer display the old tasks
- Centered warning dialog in Wunderlist theme (again)
- Updated German
- Fixes Low Graphics Label in settings


### 1.2.3 (2012-04-30)
- Added Hungarian
- Fixes bug where remove from today would look ugly
- New Sync settings

### 1.2.2 (2012-04-29)
- Updated Italian
- Added Spanish
- Background size is now set to tile by default
- Coffee theme list buttons are fixed
- You can now delete task 0
- Additional Keyboard Shortcuts for Linux

### 1.2 (2012-04-27)
- Adds Keyboard Shortcuts
- Chrome Version has custom backgrounds
- Ubuntu Version has App Menu Support
- About Dialog
- New Settings
- Donate/Report Bug/Help buttons
- Bug fixes that I can't remember
- Adds Basque Translation
- Adds Finnish Translation
- Adds Polish Translation

---

### 1.1 (2012-04-16)
- Adds French Translation
- Adds Italian Translation
- Adds Russian Translation
- Adds Vietnamese Translation
- Adds Arabic Translation
- Adds Ambiance Theme
- Adds Adwaita Theme