@@ -9,6 +9,7 @@ Changelog
 - Scheduled Tasks
 - Recurring Tasks
 - If there is nothing in the search box, it just displays the list.
+- Fixed show more tasks
 - List of Donors
 - New Icon
 
